# Enso

./: .gitignore  Makefile  README.md  WALKTHROUGH.md  pyproject.toml  training-log.md
results/svgd_annealed/: results.json
results/svgd_comparison/: results.json
scripts/: compare_inference.py  eval_checkpoint.py  experiment_energy_predictiveness.py  finetune_svgd.py  plot_training.py  run_interpretability.py  smoke_test.py
src/ebm/: __init__.py  main.py
src/ebm/dataset/: __init__.py  loader.py  torch_dataset.py
src/ebm/evaluation/: metrics.py  plotting.py  solver.py
src/ebm/interpretability/: __init__.py  ablation.py  analysis.py  attention.py  attention_analysis.py  difficulty.py  landscape.py  metrics.py  recorder.py  strategies.py  types.py
src/ebm/model/: constraints.py  decoder.py  encoder.py  jepa.py  kernels.py
src/ebm/training/: checkpoint.py  losses.py  metrics.py  scheduler.py  trainer.py
src/ebm/utils/: __init__.py  config.py  device.py
tests/dataset/: test_torch_dataset.py
tests/interpretability/: test_ablation.py  test_analysis.py  test_attention.py  test_attention_analysis.py  test_difficulty.py  test_landscape.py  test_metrics.py  test_recorder.py  test_strategies.py
tests/model/: test_jepa.py  test_kernels.py
tests/training/: test_checkpoint.py  test_losses.py
tests/utils/: test_device.py
