[project]
name = "ebm-mvp"
version = "0.1.0"
description = "An attempt to create a Sudoku Solver using Yann LeCunn's latent reasoning approach"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "huggingface>=0.0.1",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scipy>=1.15.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "wandb>=0.24.2",
]

[dependency-groups]
dev = [
    "pytest >= 9.0.1",
    "pytest-mock >= 3.15.1",
    "pytest-asyncio >= 1.3.0",
    "pytest-cov >= 7.0.0",
    "ruff >= 0.14.6",
    "ty >= 0.0.1a27",
    "matplotlib>=3.10.8",
]
unit-test = [
    "pytest >= 9.0.1",
    "pytest-mock >= 3.15.1",
    "pytest-asyncio >= 1.3.0",
    "pytest-cov >= 7.0.0",
]
code-quality = [
    "ruff >= 0.14.6",
    "ty >= 0.0.1a27",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ebm"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
extend-select = ["D", "RUF", "PT", "TID", "I", "PL"]
ignore = ["D203", "D212"]
per-file-ignores = { "tests/**/*.py" = ["D", "PLR2004"], "*_test.py" = ["D", "PLR2004"], "src/ebm/interpretability/strategies.py" = ["PLR2004", "PLR0912"], "src/ebm/interpretability/attention_analysis.py" = ["PLR2004"], "src/ebm/interpretability/metrics.py" = ["PLR2004"], "scripts/*.py" = ["PLR0915"] }

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ty.terminal]
output-format = "concise"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.pytest]
addopts = ["--cov=src", "--cov-report", "xml", "--cov-report=term-missing", "--cov-fail-under=95", "--maxfail=3", "--durations=5"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__"]
omit = [
    "src/ebm/main.py",
    "src/ebm/training/trainer.py",
    "src/ebm/training/metrics.py",
]
